cabal-version:      3.14
name:               Isl
version:            0.0.0.1
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             bokutotu
maintainer:         mushin.hudoushin@gmail.com
-- copyright:
category:           ffi
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:                 warnings
    exposed-modules:        Isl
    other-modules:          Foreign.Isl.Ctx
    -- other-extensions:
    build-depends:          base ^>=4.19.1.0
    hs-source-dirs:         src
    default-language:       Haskell2010
    pkgconfig-depends:      isl >=0.27

test-suite Isl-test
    import:           warnings
    default-language: Haskell2010
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.19.1.0,
        Isl
