cabal-version:      3.0
name:               Isl
version:            0.0.0.1
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             bokutotu
maintainer:         mushin.hudoushin@gmail.com
-- copyright:
category:           ffi
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:                 warnings
    exposed-modules:        Isl.Ctx
        

    other-modules:          Foreign.Isl.Ctx
                          , Foreign.Isl.Id
                          , Foreign.Isl.Set
                          , Foreign.Isl.Val
    -- other-extensions:
    build-tool-depends:     c2hs:c2hs
    build-depends:          base >=4.18 && <4.21
    hs-source-dirs:         src
    default-language:       GHC2024
    pkgconfig-depends:      isl >=0.27

test-suite Isl-test
    import:           warnings
    default-language: GHC2024
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:    base >=4.18 && <4.21
                      , Isl
