cabal-version:      3.14
name:               Isl
version:            0.0.0.1
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             bokutotu
maintainer:         mushin.hudoushin@gmail.com
-- copyright:
category:           ffi
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:                  warnings
    exposed-modules:         Isl.Ctx
                           , Isl.Set
                           , Isl.UnionSet
                           , Isl.Map
                           , Isl.UnionMap
                           , Isl.Flow
                           , Isl.Schedule
                           , Isl.AstBuild
                           , Isl.Val
                           , Isl.Id
    other-modules:           Foreign.Isl.Ctx
                           , Foreign.Isl.Set
                           , Foreign.Isl.UnionSet
                           , Foreign.Isl.Map
                           , Foreign.Isl.UnionMap
                           , Foreign.Isl.Flow
                           , Foreign.Isl.Schedule
                           , Foreign.Isl.AstBuild
                           , Foreign.Isl.Val
                           , Foreign.Isl.Id
    -- other-extensions:
    ghc-options:            -optc-Wno-incompatible-pointer-types-discards-qualifiers
    build-depends:          base >=4.18 && <4.21
    hs-source-dirs:         src
    default-language:       GHC2024
    pkgconfig-depends:      isl >=0.27

test-suite Isl-test
    import:           warnings
    default-language: GHC2024
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:    base >=4.18 && <4.21
                      , Isl
